[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-nebius"
version = "0.1.0"
description = "LangChain integration for Nebius AI Studio"
authors = ["Akim Tsvigun <aktsvigun@nebius.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain-core = "0.3.35"
openai = "^1.0.0"
langchain_openai = "0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
langchain-tests = "0.3.1"